[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprite/Enemies/BadGuy.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Font1.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Enemy/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Sprite/arrow.png" type="Texture" id=5]
[ext_resource path="res://Fonts/font4.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Flip"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 0.7, 0.9, 1.1, 1.3, 1.5 ),
"transitions": PoolRealArray( 3.15937e-05, 1.53611e-10, 3.15937e-05, 1.53611e-10, 3.15937e-05, 1.53611e-10 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( 1, 1 ), Vector2( -1, 1 ), Vector2( 1, 1 ), Vector2( -1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 2 ),
"transitions": PoolRealArray( 1, 5.70862e-12, 2.06674e-09, 1.26682e-11, 2.06674e-09, 1.26682e-11, 2.06674e-09, 1, 1 ),
"update": 0,
"values": [ Vector2( -80, -80 ), Vector2( -80, -40 ), Vector2( -80, -40 ), Vector2( -80, -40 ), Vector2( 80, -40 ), Vector2( -80, -40 ), Vector2( 80, -40 ), Vector2( -80, -40 ), Vector2( -80, -80 ) ]
}

[node name="Enemy" type="Node2D"]
script = ExtResource( 4 )

[node name="Texture" type="TextureButton" parent="."]
margin_left = -80.0
margin_top = -80.0
margin_right = 80.0
margin_bottom = 80.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlipAnimation" type="AnimationPlayer" parent="Texture"]
anims/Flip = SubResource( 1 )

[node name="EnemyLabel" type="RichTextLabel" parent="."]
margin_left = -104.0
margin_top = -168.0
margin_right = 112.0
margin_bottom = -64.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Heckler[/center]"
text = "Heckler"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyHP" type="RichTextLabel" parent="."]
margin_left = -96.0
margin_top = 88.0
margin_right = 96.0
margin_bottom = 144.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]10/10[/center]"
text = "10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemySelector" type="Control" parent="."]
margin_left = -112.0
margin_top = -88.0
margin_right = 152.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="EnemySelector"]
margin_left = 3.0
margin_top = 61.0
margin_right = 35.0
margin_bottom = 93.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="EnemySelector"]
margin_left = 176.0
margin_top = 61.0
margin_right = 208.0
margin_bottom = 93.0
texture = ExtResource( 5 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="EnemySelector"]
margin_left = 3.0
margin_top = 105.0
margin_right = 35.0
margin_bottom = 137.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="EnemySelector"]
margin_left = 176.0
margin_top = 105.0
margin_right = 208.0
margin_bottom = 137.0
texture = ExtResource( 5 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Texture" to="." method="_on_TextureButton_pressed"]
